--- a/BookPoolV2/bookpool_email.html
+++ b/BookPoolV2/bookpool_email.html
@@ -1,4 +1,4 @@
-﻿<html>
+﻿<!--<html>
 <head>
 
     <style>
@@ -24,12 +24,129 @@
 
 </body>
 
+</html>-->
+
+
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style type="text/css">
+
+        body {
+            background-color: white;
+            margin: 0px;
+        }
+        .goTo {
+            appearance: button;
+            -webkit-writing-mode: horizontal-tb !important;
+            text-rendering: auto;
+            color: -internal-light-dark(buttontext, rgb(170, 170, 170));
+            letter-spacing: normal;
+            word-spacing: normal;
+            text-transform: none;
+            text-indent: 0px;
+            text-shadow: none;
+            display: inline-block;
+            text-align: center;
+            align-items: flex-start;
+            cursor: default;
+            background-color: -internal-light-dark(rgb(239, 239, 239), rgb(74, 74, 74));
+            box-sizing: border-box;
+            margin: 0em;
+            font: 400 13.3333px Arial;
+            padding: 1px 6px;
+            border-width: 2px;
+            border-style: outset;
+            border-color: -internal-light-dark(rgb(118, 118, 118), rgb(195, 195, 195));
+            border-image: initial;
+        }
+
+    </style>
+</head>
+<body>
+    <table border="0" width="50%" style="margin:auto;padding:30px;background-color: #F3F3F3;border:1px solid #FF4C4C;">
+        <tr>
+            <td>
+                <table border="0" width="100%">
+                    <tr>
+                        <td>
+                            <h1>
+                                <img style="width:150px;" src="https://bookpool.me/img/bookpool-logo-transparent.png" />
+                            </h1>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table border="0" cellpadding="0" cellspacing="0" style="text-align:center;width:100%;background-color: #fff;">
+                    <tr>
+                        <td style="background-color:#FF4C4C;height:100px;font-size:50px;color:#fff;"><i class="fa fa-envelope-o" aria-hidden="true"></i></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h1 style="padding-top:25px;">Hello {Name}</h1>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="padding:0px 100px;">
+                                {Message}
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://bookpool.me/" class="goTo" style="margin:10px 0px 30px 0px;border-radius:4px;padding:10px 20px;border: 0;color:#fff;background-color:#FF4C4C;">
+                                Go to Bookpool
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <table border="0" width="100%" style="border-radius: 5px;text-align: center;">
+                    <tr>
+                        <td>
+                            <h3 style="margin-top:10px;">Stay in touch</h3>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div style="margin-top:20px;">
+                                <a href="https://www.facebook.com/bookpool.me/" style="text-decoration: none;margin:5px;">
+                                    <span class="fb" style="padding:10px 9px;background-color: #3B5998;color:#fff;border-radius:50%;">
+                                        <i class="fa fa-facebook" aria-hidden="true" style="height:20px;width:20px;"></i>
+                                    </span>
+                                </a>
+                                <a href="mailto:bookpool.me@gmail.com" style="text-decoration: none;margin:5px;">
+                                    <span class="msg" style="padding:10px 9px;background-color: #FFC400;color:#fff;border-radius:50%;">
+                                        <i class="fa fa-envelope-o" aria-hidden="true" style="height:20px;width:20px;"></i>
+                                    </span>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div style="margin-top: 20px;">
+                                <span style="font-size:12px;">Books, but cheaper</span><br>
+                                <span style="font-size:12px;">Copyright © 2019 Bookpool.me</span>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
 </html>
-
-
-
-
-
-
 
 
