--- a/BookPoolV2/bookpool_email.html
+++ b/BookPoolV2/bookpool_email.html
@@ -86,7 +86,9 @@
             <td>
                 <table border="0" cellpadding="0" cellspacing="0" style="text-align:center;width:100%;background-color: #fff;">
                     <tr>
-                        <td style="background-color:#FF4C4C;height:100px;font-size:50px;color:#fff;"><i class="fa fa-envelope-o" aria-hidden="true"></i></td>
+                        <td style="background-color:#FF4C4C;height:100px;font-size:50px;color:#fff;">
+                            <img width="50" src="https://bookpool.me/img/mail-logo.png" />
+                        </td>
                     </tr>
                     <tr>
                         <td>
@@ -95,7 +97,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p style="padding:0px 100px;">
+                            <p style="padding:0px 30px;">
                                 {Message}
                             </p>
                         </td>
@@ -122,14 +124,10 @@
                         <td>
                             <div style="margin-top:20px;">
                                 <a href="https://www.facebook.com/bookpool.me/" style="text-decoration: none;margin:5px;">
-                                    <span class="fb" style="padding:10px 9px;background-color: #3B5998;color:#fff;border-radius:50%;">
-                                        <i class="fa fa-facebook" aria-hidden="true" style="height:20px;width:20px;"></i>
-                                    </span>
+                                    <img width="50" src="https://bookpool.me/img/facebook-logo.png" />
                                 </a>
-                                <a href="mailto:bookpool.me@gmail.com" style="text-decoration: none;margin:5px;">
-                                    <span class="msg" style="padding:10px 9px;background-color: #FFC400;color:#fff;border-radius:50%;">
-                                        <i class="fa fa-envelope-o" aria-hidden="true" style="height:20px;width:20px;"></i>
-                                    </span>
+                                <a href="https://www.instagram.com/bookpool.me/" style="text-decoration: none;margin:5px;">
+                                    <img width="50" src="https://bookpool.me/img/instagram-logo.png" />
                                 </a>
                             </div>
                         </td>
